# quotation_system

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20220501_1505.py
core/templates/: offline.html  pwa.html
core/templates/core/: main.html  manifest.json
core/templates/quotation_system/: base.html
core/templatetags/: core_tags.py
quotation/: models.py  serializers.py  urls.py  views.py
quotation/management/commands/: set_up_data.py
quotation/migrations/: 0001_initial.py  0002_alter_ratecurrency_value.py  0003_alter_ratecurrency_value.py
quotation/tests/: conftest.py  test_models.py  test_views.py
quotation/utils/: integrations.py
quotation_system/: asgi.py  settings.py  urls.py  wsgi.py
quotation_system/settings/: base.py  extra.py
static/: serviceworker.js
