[tool.poetry]
name = "quotation_system"
version = "0.1.0"
description = ""
authors = ["Angelo Siqueira <angeloasiqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.9"
python-decouple = "^3.6"
requests = "^2.27.1"
djangorestframework = "^3.13.1"
django-solo = "^2.0.0"
psycopg2-binary = "^2.9.3"
drf-yasg = "^1.20.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
